   - Replace Backup standard dialog box with an assistant (todo #1317).
   - Add to backup archives a JSON header.

   + ofa-unzip: command-line utility to unarchive a data flow on stdout.

 Bug fixes:

   - 

 Other changes:

   DBModel Core v34.

   - myICollectionable: remove ofaHub dependancy (todo #1319).
   - my_iwindow_msg_dialog(): deprecated (todo #1333).
   - my_stamp_xxx() functions now accept a display format (todo #1318).
   - my_utils_file_is_readable_file(): renamed to my_utils_file_is_readable().
   - my_utils_uri_is_readable_file(): renamed to my_utils_uri_is_readable().
   - ofaBackupAssistant: new class.
   - ofaDossierProps: new class.
   - ofa_idbconnect_backup(): renamed to ofa_idbconnect_backup_db().
   - ofa_idbconnect_restore(): renamed to ofa_idbconnect_restore_db().
   - ofaIDBSuperuser: new interface.
   - ofaExerciceEditBin: new class.
   - ofaExerciceNew: new class.

   + Add a prequisite on JSON-GLib library.
   + Add a prequisite on libarchive library.

-----------------------------------------------------------------------
 Version 0.64
 ============

 Released on 2017-01-09

 New features and improvements:

   - ofaDossierOpen: exercice is disabled if no dossier is selected (todo #1297).
   - ofaExportAssistant: have a message when output file is not set.

 Bug fixes:

   - myIAssistant: fix quit on escape (fix key propagation).
   - ofaImportAssistant: fix page 4 label position.
   - ofaStreamFormatBin: fix header widgets sensitivity (todo #1298, #1299).

 Other changes:

   - my_idialog_click_to_update_ex(): new method.
   - myIDialog: set OK button insensitive in case of an error.
   - myIWindow: set_settings() is renamed set_geometry_settings() (todo #1282).
   - myIWindow: deprecate my_iwindow_get_keyname() (todo #1283).
   - No more try to read/write user settings from myIWindow geometry settings (todo #1284).
   - ofaAccountBookBin class is renamed to ofaAccountBookArgs.
   - ofaBalanceBin class is renamed to ofaBalanceArgs.