@@ -122,7 +122,6 @@ typedef struct {
 	GList                *p6_forwards;			/* forward operations */
 	GList                *p6_cleanup;
 	GList                *p6_unreconciliated;
-	gboolean              is_destroy_allowed;
 
 	/* plugins for IExeClosexxx interfaces
 	 */
@@ -157,7 +156,6 @@ static const gchar *st_resource_ui      = "/org/trychlos/openbook/ui/ofa-exercic
 
 static void           iwindow_iface_init( myIWindowInterface *iface );
 static void           iwindow_init( myIWindow *instance );
-static gboolean       iwindow_is_destroy_allowed( const myIWindow *instance );
 static void           iassistant_iface_init( myIAssistantInterface *iface );
 static gboolean       iassistant_is_willing_to_quit( myIAssistant*instance, guint keyval );
 static void           p0_do_forward( ofaExerciceCloseAssistant *self, gint page_num, GtkWidget *page_widget );
@@ -308,7 +306,6 @@ ofa_exercice_close_assistant_init( ofaExerciceCloseAssistant *self )
 
 	priv->dispose_has_run = FALSE;
 	priv->settings_prefix = g_strdup( G_OBJECT_TYPE_NAME( self ));
-	priv->is_destroy_allowed = TRUE;
 
 	gtk_widget_init_template( GTK_WIDGET( self ));
 }
@@ -367,7 +364,6 @@ iwindow_iface_init( myIWindowInterface *iface )
 	g_debug( "%s: iface=%p", thisfn, ( void * ) iface );
 
 	iface->init = iwindow_init;
-	iface->is_destroy_allowed = iwindow_is_destroy_allowed;
 }
 
 static void
@@ -388,19 +384,6 @@ iwindow_init( myIWindow *instance )
 	my_iwindow_set_geometry_settings( instance, ofa_hub_get_user_settings( priv->hub ));
 
 	my_iassistant_set_callbacks( MY_IASSISTANT( instance ), st_pages_cb );
-}
-
-static gboolean
-iwindow_is_destroy_allowed( const myIWindow *instance )
-{
-	static const gchar *thisfn = "ofa_exercice_close_assistant_iwindow_is_destroy_allowed";
-	ofaExerciceCloseAssistantPrivate *priv;
-
-	g_debug( "%s: instance=%p", thisfn, ( void * ) instance );
-
-	priv = ofa_exercice_close_assistant_get_instance_private( OFA_EXERCICE_CLOSE_ASSISTANT( instance ));
-
-	return( priv->is_destroy_allowed );
 }
 
 /*
@@ -1466,9 +1449,9 @@ p6_do_archive_exercice( ofaExerciceCloseAssistant *self, gboolean with_ui )
 			/* opening the new dossier means also closing the old one
 			 * prevent the window manager to close this particular one
 			 */
-			priv->is_destroy_allowed = FALSE;
+			my_iwindow_set_close_allowed( MY_IWINDOW( self ), FALSE );
 			ok = ofa_hub_dossier_open( priv->hub, GTK_WINDOW( main_window ), cnx, FALSE, FALSE );
-			priv->is_destroy_allowed = TRUE;
+			my_iwindow_set_close_allowed( MY_IWINDOW( self ), TRUE );
 			if( ok ){
 				priv->dossier = ofa_hub_get_dossier( priv->hub );
 				priv->connect = ofa_hub_get_connect( priv->hub );
